--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>Click me!</button>
+    <button>Push me!</button>
 
     <script src="script.js"></script>
 </body>
